--- a/backend/apps/notify/src/assets/add-user.hbs
+++ b/backend/apps/notify/src/assets/add-user.hbs
@@ -1,7 +1,7 @@
 <h2>Привет, {{user}}</h2>
-<p>Вы зарегистрированы в "Guitar shop". Ваш логин
-  {{email}}
-  Пароль
-  {{password}}
-  <a href='http://localhost:3000/'>Открыть Guitar shop</a>
+<p>Вы зарегистрированы в "Guitar shop".</p>
+<p>
+  <b>Логин: </b>{{email}}<br />
+  <b>Пароль: </b>{{password}}
 </p>
+<a href='http://localhost:5000/'>Открыть Guitar shop</a>
